# rust-player

./: .gitignore  Cargo.toml  final.md  plan.md  spec.md  test.md  todos.md
.codebase-memory/: graph.db.zst  manifest.json
.opencode/memory/: memory-fallback.json  tool-audit.md
.opencode/status-footer/: state.json
scripts/: inspect_mp4.py  parse_obu.py
src/: error.rs  lib.rs  main.rs  player.rs
src/audio/: clock.rs  decoder.rs  mod.rs  output.rs  sink.rs
src/hw/: mod.rs
src/i18n/: mod.rs
src/render/: mod.rs  pipeline.rs  yuv.wgsl
src/stream/: mod.rs
src/subtitle/: mod.rs
src/sync/: mod.rs
src/ui/: fonts.rs  mod.rs  theme.rs
src/video/: decoder.rs  demux.rs  frame.rs  h264.rs  h265.rs  mod.rs  nal.rs  obu.rs  worker.rs
